--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.fa filter=lfs diff=lfs merge=lfs -text
 *.Rmd filter=lfs diff=lfs merge=lfs -text
+R_Scripts/.RData filter=lfs diff=lfs merge=lfs -text
